# str-newtype-rs

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: attribute.rs  lib.rs  new_type.rs  options.rs
examples/: iri.rs
examples/automata/: mod.rs
src/: lib.rs
