[workspace]
members = ["derive"]

[workspace.package]
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["parsing"]
keywords = ["parsing", "abnf", "derive", "grammar", "regular"]
repository = "https://github.com/timothee-haudebourg/str-newtype-rs"
documentation = "https://docs.rs/str-newtype"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"
version = "1.0.2" # Don't forget to bump the derive macro dependency.

[workspace.dependencies]
str-newtype-derive = { path = "derive", version = "1.0.2" }

[package]
name = "str-newtype"
description = "Derive macro to define safe wrappers around string types"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
str-newtype-derive.workspace = true

[dev-dependencies]
static-automata = "1.0"