[package]
name = "str-newtype-derive"
version = "2.0.2"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["parsing"]
keywords = ["parsing", "abnf", "derive", "grammar", "regular"]
description = "Derive macro for static regular grammar"
repository = "https://github.com/timothee-haudebourg/static-automata"
documentation = "https://docs.rs/static-automata"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
proc-macro-error = "1.0.4"
syn = "2.0.18"
quote = "1.0.29"
thiserror = "1.0.40"
# indoc = "2.0.1"