[package]
name = "str-newtype-derive"
description = "Derive macro to define safe wrappers around string types"
authors.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.60"
proc-macro-error = "1.0.4"
syn = "2.0.18"
quote = "1.0.29"
thiserror = "1.0.40"